dynamic-enum: updated to java 21 and spring boot 3.2.5 version