@@ -1,15 +1,15 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.6.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.2.5'
+    id 'io.spring.dependency-management' version '1.1.4'
 }
 
 group = 'com.fedorizvekov'
 version = '1.0.0-SNAPSHOT'
 description = 'Reflection experiment'
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_21
+targetCompatibility = JavaVersion.VERSION_21
 
 repositories {
     mavenCentral()
@@ -36,8 +36,10 @@ compileJava {
 
 test {
     doFirst {
+        systemProperty "jdk.reflect.useDirectMethodHandle", "false"
         jvmArgs += ["--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED"]
         jvmArgs += ["--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"]
+        jvmArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
     }
     useJUnitPlatform()
 }
